Some cosmetic changes

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,8 +4,8 @@
 \section{Conclusion}
 
 In this work, we proposed a two step approach to reduce the heat stress for individuals. We achieved this goal by creating a decision support system that computes heat-optimal paths to locations as well the optimal points in time to do so. We evaluated this on typical every-day activities such as grocery shopping. 
-We showed that our approach reduces the heat stress in a vast majority of the cases. On average the heat stress can be reduced by ~4.7\% while the trade off in additional distance is also quite low. This is never more than 5.76 \% . We achieved these results, contrary to the existing work, for relatively small distances which average over ~ 2 km.
+We showed that our approach reduces the heat stress in a vast majority of the cases. On average the heat stress can be reduced by \SI{\sim 4.7}{\percent} while the trade off in additional distance is also quite low. This is never more than \SI{5.76}{\percent} on average. We achieved these results, contrary to the existing work, for relatively small distances which average over \SI{\sim  2}{\kilo\meter}.
 The impact of these results are simple, but significant. One can easily compute our approach and decide for themselves the trade-off between additional distance and the heat stress reduction.
 Thanks to the very small assumptions on the data set, one can apply the approach quite easily to other cities. 
-But these assumptions are also the main restriction of this work. Given the rise of smart cities and and (hopefully) more available data sources, one could improve the approach with more fine-detailed data. Even more interesting would be the inclusion of intra urban temperature forecasts. By incorporating exact forecasts of future values along possible pathways, the optimal point in time as well as the reduction of the heat stress could be improved. Additionally the inclusion of more complex heat indices could increase the validity for any potential user. 
+But these assumptions are also the main restriction of this work. Given the rise of smart cities and (hopefully) more available data sources, one could improve the approach with more fine-detailed data. Even more interesting would be the inclusion of intra urban temperature forecasts. By incorporating exact forecasts of future values along possible pathways, the optimal point in time as well as the reduction of the heat stress could be improved. Additionally the inclusion of more complex heat indices could increase the validity for any potential user. 
 Finally, the computation of an overall route which covers a multitude of potential points of interests would be an interesting extension. This could be used for tourists or even worker scheduling. Here not only the time and the route with minimal heat exposure should be considered but also, the ordering of the locations.  
