--- a/evaluation.tex
+++ b/evaluation.tex
@@ -71,10 +71,12 @@ As optimization algorithm, we use the implementation of Brent's method in the Ap
 		\label{fig:route-example:raster}
 		\includegraphics[scale=0.7]{figures/route_example_raster}
 	}     
-	\caption{Routing example: both the \emph{temperature} and the \emph{heatindex} weighting found the same route. (Map tiles by \textcite{Stamen2017}, under CC BY 3.0\protect\footnotemark. Map data by \textcite{OSMF2016}, under ODbL\protect\footnotemark)}
+	\caption{Routing example: both the \emph{temperature} and the \emph{heatindex} weighting found the same route. (Map tiles by \textcite{Stamen2017}, under CC BY 3.0\protect\footnotemark{}. Map data by \textcite{OSMF2016}, under ODbL\protect\footnotemark{})}
 	\label{fig:route-example}
 \end{figure}
+\addtocounter{footnote}{-1}
 \footnotetext{\url{http://creativecommons.org/licenses/by/3.0}}
+\stepcounter{footnote}
 \footnotetext{\url{http://www.openstreetmap.org/copyright}}
 }
 
@@ -107,7 +109,7 @@ In the example given in figure \ref{fig:route-example} the heat exposure could b
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=0.9]{figures/optimaltime_route_example}
+	\includegraphics[scale=1]{figures/optimaltime_route_example}
 	\caption{Example for nearby search: In the graphic the starting point (black dot) as well as the locations ranked first by the respective method. (Map tiles by \textcite{Stamen2017}, under CC BY 3.0. Map data by \textcite{OSMF2016}, under ODbL)}
 	\label{fig:optimaltime-route-example}
 \end{figure}
