--- a/introduction.tex
+++ b/introduction.tex
@@ -31,9 +31,9 @@ The impact of heat on the human body has long been a subject of study. Thermal c
 For all these indices the following meteorological parameters are important:
 \begin{inparaenum}[(1)]
 \item air temperature,
-\item vapour pressure,
+\item water vapour pressure,
 \item wind velocity 
-\item and mean radiant temperature of the surroundings \parencite{Matzarakis1999}.
+\item and mean radiant temperature \parencite{Jendritzky2010}.
 \end{inparaenum}
 
 Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature.
