--- a/paper.tex
+++ b/paper.tex
@@ -14,6 +14,7 @@
 \usepackage{subfigure}
 \usepackage{paralist}
 \usepackage{afterpage}
+\usepackage{booktabs}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
