--- a/introduction.tex
+++ b/introduction.tex
@@ -6,21 +6,21 @@
 Heat is an important factor to human health and comfort. High temperatures cannot only lead to a discomfort, such as sweating, it also has serious negative effects on the health as well as on the ability to work. 
 
 In numerous studies an increase in both mortality and
-morbidity has been associated with a high ambient temperature \parencite{Basu2009}. The most well known example in recent history is the 2003 heat wave in Europe. 
+morbidity has been associated with a high ambient temperature \parencite{Basu2009}. The most well-known example in recent history is the 2003 heat wave in Europe. 
 Certain groups are especially vulnerable to heat stress such as older people or people with health problems \parencite{Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Davis2010}.
 
 Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. Due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. The UHI effect states that an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. 
 
-Individuals can reduce their heat stress by adapting their everyday behaviour. In a city, most typical activities are in walking distance. These can range from going to a grocery store to the visit of a doctor. And while these activities can not be omitted, it is possible to use different routes or change the time when they are conducted. In doing so, one can easily reduce the heat stress without any negative impact on the quality of life. 
+Individuals can reduce their heat stress by adapting their everyday behaviour. In a city, most typical activities are in walking distance. These can range from going to a grocery store to the visit of a doctor. And while these activities cannot be omitted, it is possible to use different routes or change the time when they are conducted. In doing so, one can easily reduce the heat stress without any negative impact on the quality of life. 
 
-In this paper we use this reasoning into a two step approach to help individuals reduce their heat stress. First, we apply a routing algorithm to compute the optimal path in regard to the heat stress. This algorithm is then used to determine the optimal point in time to conduct typical everyday activities. 
+In this paper, we use this reasoning into a two-step approach to help individuals reduce their heat stress. First, we apply a routing algorithm to compute the optimal path in regard to the heat stress. This algorithm is then used to determine the optimal point in time to conduct typical everyday activities. 
   
 \subsection{Related Work} 
 
 \subsubsection{Heat Stress}
 The impact of heat on the human body has long been a subject of study. Thermal comfort plays a key role, which describes climatic conditions consider comfortable. 
 
-\textcite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well known indices that consider a complete human heat budget model are the following:
+\textcite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well-known indices that consider a complete human heat budget model are the following:
 \begin{inparaenum}[(1)]
   \item \citeauthor{Steadman1979}'s heat index (\citeauthor{Steadman1979} \citeyear*{Steadman1979}, \citeyear*{Steadman1979a}),
   \item the predicted mean vote (PMV) \parencite{Fanger1973},
