Title and abstract

--- a/paper.tex
+++ b/paper.tex
@@ -31,7 +31,7 @@
 {}
 
 %opening
-\title{Decision Support for Route Planning to Reduce Heat Stress Considering the Time of the Day}
+\title{Reducing Individual Heat Stress Through Path Planning}
 \author{}
 
 \begin{document}
@@ -44,6 +44,9 @@ To encourage and support such a change of behaviour, we propose a two step appro
 We evaluate our approach for the city of Karlsruhe. 	
 Our results show that the combined approach, as well as only its single steps, can reduce the heat exposure and therefore the heat stress for typical daily tasks.
 \end{abstract}
+
+\keywords{Heat Stress, Time Dependent Routing, Decision Support, Urban Vulnerability}
+
 
 \input{introduction}
 \input{mainpart}
