Fixed keyword list

--- a/paper.tex
+++ b/paper.tex
@@ -16,6 +16,8 @@
 \usepackage{afterpage}
 \usepackage{booktabs}
 
+\providecommand{\keywords}[1]{\textbf{Keywords:} #1}
+
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
 \addbibresource{literature.bib}
