More suitable heading and some small improvments

--- a/introduction.tex
+++ b/introduction.tex
@@ -38,9 +38,9 @@ For all these indices the following meteorological parameters are important:
 
 Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature.
 
-\subsubsection{Environmental Dependent Routing}
-Several research projects have considered environmental factors for pedestrian routing in the paste. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
+\subsubsection{Health Optimal Pedestrian Routing}
+Several research projects have considered environmental factors for pedestrian routing in the paste, to find routes which are more healthy. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
 
-The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013}, enables to improve the comfort considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
+The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013} enables to improve the comfort, considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors, like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological data used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
 In contrast to the existing work, we contribute an approach which does not rely on extensive sensor networks. We achieve this by combining remote sensing data with in-situ weather stations and the use of a static routing algorithm.
